--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,7 @@
 /* This file is for your main application css. */
-@import "./phoenix.css";
+/* @import "./phoenix.css"; */
+
+@import "~bootstrap/scss/bootstrap";
 
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
