--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,6 +3,8 @@
 
 @import "~bootstrap/scss/bootstrap";
 
+@import "partials/navigation";
+
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
 .phx-no-feedback .invalid-feedback {
