--- a/lib/albums_web/live/page_live.html.leex
+++ b/lib/albums_web/live/page_live.html.leex
@@ -1,5 +1,6 @@
 <div class="row justify-content-md-center mt-5">
   <div class="col col-md-9 col-lg-8">
+    <h1>Albums Project</h1>
     <p>
       The Arab Image Foundation was awarded a grant by the Hillman Family Foundation to carry out the
       physical and digital preservation on the 44 albums. The aim was to apply the newly revised
