Use bootstrap modal for live component forms

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,6 +4,7 @@
 @import "bootstrap_overrides";
 @import "~bootstrap/scss/bootstrap";
 
+@import "partials/modal";
 @import "partials/navigation";
 @import "partials/homepage";
 
