--- a/lib/albums_web/live/collection_live/form_component.html.leex
+++ b/lib/albums_web/live/collection_live/form_component.html.leex
@@ -6,21 +6,28 @@
   phx_change: "validate",
   phx_submit: "save" %>
 
-  <%= label f, :aifid %>
-  <%= text_input f, :aifid %>
-  <%= error_tag f, :aifid %>
+  <div class="my-3">
+    <%= label f, :aifid, class: "form-label" %>
+    <%= text_input f, :aifid, class: "form-control" %>
+    <%= error_tag f, :aifid %>
+  </div>
 
-  <%= label f, :name %>
-  <%= text_input f, :name %>
-  <%= error_tag f, :name %>
+  <div class="my-3">
+    <%= label f, :name, class: "form-label" %>
+    <%= text_input f, :name, class: "form-control" %>
+    <%= error_tag f, :name %>
 
-  <%= label f, :contract %>
-  <%= text_input f, :contract %>
-  <%= error_tag f, :contract %>
+  <div class="my-3">
+    <%= label f, :contract, class: "form-label" %>
+    <%= text_input f, :contract, class: "form-control" %>
+    <%= error_tag f, :contract %>
+  </div>
 
-  <%= label f, :credit_line %>
-  <%= text_input f, :credit_line %>
-  <%= error_tag f, :credit_line %>
+  <div class="my-3">
+    <%= label f, :credit_line, class: "form-label" %>
+    <%= text_input f, :credit_line, class: "form-control" %>
+    <%= error_tag f, :credit_line %>
+  </div>
 
-  <%= submit "Save", phx_disable_with: "Saving..." %>
+  <%= submit "Save", phx_disable_with: "Saving...", class: "btn btn-primary" %>
 </form>
