--- a/lib/albums_web/templates/layout/_navbar.html.leex
+++ b/lib/albums_web/templates/layout/_navbar.html.leex
@@ -3,7 +3,7 @@
     <button class="navbar-toggler mt-2 mt-lg-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" phx-update="ignore">
       <ul class="navbar-nav mt-2 my-lg-0">
         <li class="nav-item">
           <%= link("Home", to: Routes.page_path(@conn, :index), class: "nav-link") %>
