--- a/lib/albums_web/live/collection_live/show.html.leex
+++ b/lib/albums_web/live/collection_live/show.html.leex
@@ -1,7 +1,3 @@
-<%= live_redirect "<- Collections", to: Routes.collection_index_path(@socket, :index) %>
-
-<h1>Collection</h1>
-
 <%= if @live_action in [:edit] do %>
   <%= live_modal @socket, AlbumsWeb.CollectionLive.FormComponent,
     id: @collection.id,
@@ -11,28 +7,21 @@
     return_to: Routes.collection_show_path(@socket, :show, @collection) %>
 <% end %>
 
-<ul>
+<div class="collection-details">
+  <h1>
+    <%= @collection.name %> Collection
+  </h1>
 
-  <li>
-    <strong>Number:</strong>
-    <%= @collection.aifid %>
-  </li>
-
-  <li>
-    <strong>Name:</strong>
-    <%= @collection.name %>
-  </li>
-
-  <li>
-    <strong>Contract:</strong>
-    <%= @collection.contract %>
-  </li>
-
-  <li>
-    <strong>Credit line:</strong>
-    <%= @collection.credit_line %>
-  </li>
-
-</ul>
-
-<%= live_patch "Edit", to: Routes.collection_show_path(@socket, :edit, @collection), class: "btn btn-warning" %>
+  <dl>
+    <dt>Reference number</dt>
+    <dd><%= @collection.aifid %></dd>
+    <% if @collection.contract != nil do %>
+      <dt>Contract reference</dt>
+      <dd><%= @collection.contract %></dd>
+    <% end %>
+    <% if @collection.credit_line != nil do %>
+      <dt>Credit line</dt>
+      <dd><%= @collection.credit_line %></dd>
+    <% end %>
+  </dl>
+<div>
