Fix typo in homepage text

--- a/lib/aif_albums_web/live/page_live.html.leex
+++ b/lib/aif_albums_web/live/page_live.html.leex
@@ -1,6 +1,6 @@
 <div id="homepage" class="row justify-content-md-center mt-5">
   <div class="col col-md-9 col-lg-8 pb-4">
-    <h1>AIFAlbums Project</h1>
+    <h1>Albums Project</h1>
     <p>
       The Arab Image Foundation was awarded a grant by the Hillman Family Foundation to carry out the
       physical and digital preservation on the 44 aif_albums. The aim was to apply the newly revised
