--- a/lib/aif_albums_web/templates/layout/root.html.leex
+++ b/lib/aif_albums_web/templates/layout/root.html.leex
@@ -12,5 +12,6 @@
   <body>
     <%= render "_navbar.html", conn: @conn %>
     <%= @inner_content %>
+    <%= render "_footer.html", conn: @conn %>
   </body>
 </html>
