--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,6 +9,7 @@
 @import "partials/navigation";
 @import "partials/footer";
 @import "partials/homepage";
+@import "partials/collection";
 
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
