--- a/lib/aif_albums_web/live/page_live.html.leex
+++ b/lib/aif_albums_web/live/page_live.html.leex
@@ -3,7 +3,7 @@
     <h1>Albums Project</h1>
     <p>
       The Arab Image Foundation was awarded a grant by the Hillman Family Foundation to carry out the
-      physical and digital preservation on the 44 aif_albums. The aim was to apply the newly revised
+      physical and digital preservation on the 44 albums. The aim was to apply the newly revised
       cataloguing and referencing system so as to relate the photographs and pages as objects inside
       the album, build custom-made boxes of appropriate sizes for each of the aif_albums, and lastly to
       digitize the aif_albums and make them available online.
