--- a/lib/aif_albums_web/live/album_live/show.html.leex
+++ b/lib/aif_albums_web/live/album_live/show.html.leex
@@ -1,5 +1,3 @@
-<h1>Show Album</h1>
-
 <%= if @live_action in [:edit] do %>
   <%= live_modal @socket, AIFAlbumsWeb.AlbumLive.FormComponent,
     id: @album.id,
@@ -9,59 +7,76 @@
     return_to: Routes.album_show_path(@socket, :show, @album) %>
 <% end %>
 
-<ul>
+<h1>Album</h1>
 
-  <li>
-    <strong>Aifid:</strong>
-    <%= @album.aifid %>
-  </li>
+<div class="row">
+  <div class="col-12 col-md-6 order-2 order-md-1">
+    <dl>
+      <dt>
+        Album number:
+      </dt>
+      <dd>
+        <%= @album.aifid %>
+      </dd>
 
-  <li>
-    <strong>Description:</strong>
-    <%= @album.description %>
-  </li>
+      <dt>
+        Collection:
+      </dt>
+      <dd>
+        <%= live_redirect "#{@album.collection.aifid} — #{@album.collection.name}",
+              to: Routes.collection_show_path(@socket, :show, @album.collection) %>
+      </dd>
 
-  <li>
-    <strong>Height:</strong>
-    <%= @album.height %>
-  </li>
+      <%= if @album.description != nil do %>
+        <dt>Description:</dt>
+        <dd><%= @album.description %></dd>
+      <% end %>
 
-  <li>
-    <strong>Width:</strong>
-    <%= @album.width %>
-  </li>
+      <%= if @album.height != nil do %>
+        <dt>Height:</dt>
+        <dd><%= @album.height %> cm</dd>
+      <% end %>
 
-  <li>
-    <strong>Depth:</strong>
-    <%= @album.depth %>
-  </li>
+      <%= if @album.width != nil do %>
+        <dt>Width:</dt>
+        <dd><%= @album.width %> cm</dd>
+      <% end %>
 
-  <li>
-    <strong>Condition:</strong>
-    <%= @album.condition %>
-  </li>
+      <%= if @album.depth != nil do %>
+        <dt>Depth:</dt>
+        <dd><%= @album.depth %> cm</dd>
+      <% end %>
 
-  <li>
-    <strong>Inscriptions:</strong>
-    <%= @album.inscriptions %>
-  </li>
+      <%= if @album.condition != nil do %>
+        <dt>Condition:</dt>
+        <dd><%= @album.condition %></dd>
+      <% end %>
 
-  <li>
-    <strong>Photographer:</strong>
-    <%= @album.photographer %>
-  </li>
+      <%= if @album.inscriptions != nil do %>
+        <dt>Inscriptions:</dt>
+        <dd><%= @album.inscriptions %></dd>
+      <% end %>
 
-  <li>
-    <strong>Date:</strong>
-    <%= @album.date %>
-  </li>
+      <%= if @album.photographer != nil do %>
+        <dt>Photographer:</dt>
+        <dd><%= @album.photographer %></dd>
+      <% end %>
 
-  <li>
-    <strong>City:</strong>
-    <%= @album.city %>
-  </li>
+      <%= if @album.date != nil do %>
+        <dt>Date:</dt>
+        <dd><%= @album.date %></dd>
+      <% end %>
 
-</ul>
+      <%= if @album.city != nil do %>
+        <dt>City:</dt>
+        <dd><%= @album.city %></dd>
+      <% end %>
+    </dl>
 
-<span><%= live_patch "Edit", to: Routes.album_show_path(@socket, :edit, @album), class: "button" %></span>
-<span><%= live_redirect "Back", to: Routes.album_index_path(@socket, :index) %></span>
+  </div>
+  <div class="col-12 col-md-6 order-1 order-md-2">
+    <img src="https://via.placeholder.com/800x450?text=<%= @album.aifid %> cover"
+          alt="Album <%= @album.aifid %>" class="card-img-top" />
+    <a class="btn btn-primary w-100 my-4">View Content</a>
+  </div>
+</div>
