--- a/lib/aif_albums_web/live/page_live.html.leex
+++ b/lib/aif_albums_web/live/page_live.html.leex
@@ -5,8 +5,8 @@
       The Arab Image Foundation was awarded a grant by the Hillman Family Foundation to carry out the
       physical and digital preservation on the 44 albums. The aim was to apply the newly revised
       cataloguing and referencing system so as to relate the photographs and pages as objects inside
-      the album, build custom-made boxes of appropriate sizes for each of the aif_albums, and lastly to
-      digitize the aif_albums and make them available online.
+      the album, build custom-made boxes of appropriate sizes for each of the abums, and lastly to
+      digitize the albums and make them available online.
     </p>
   </div>
   <hr class="bg-secondary">
