--- a/assets/css/partials/_navigation.scss
+++ b/assets/css/partials/_navigation.scss
@@ -1,20 +1,29 @@
+.link-to-aif {
+  background-color: #f0f0f0;
+  border-bottom: 1px solid #e0e0e0;
+  font-weight: 300;
+  font-size: 0.75rem;
+
+  @include media-breakpoint-up(md) { 
+    font-size: 0.9rem;
+  }
+
+  a {
+    color: $gray-800;
+    text-decoration: none;
+  }
+
+  img {
+    height: 30px;
+
+    @include media-breakpoint-up(md) { 
+      height: 36px;
+    }  
+  }
+}
+
 .navbar {
   margin-bottom: 1rem;
   border-bottom: 1px solid #e0e0e0;
 
-  .container {
-    position: relative;
-    
-    .nav-brand {
-      position: absolute;
-      right: $container-padding-x;
-      top: 0;
-
-      @include media-breakpoint-up(lg) { 
-        position: relative;
-        right: auto;
-        top: auto;
-      }
-    }
-  }
 }
