--- a/lib/aif_albums_web/templates/layout/_navbar.html.leex
+++ b/lib/aif_albums_web/templates/layout/_navbar.html.leex
@@ -1,17 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-light pb-3 pb-lg-2" role="navigation">
-  <div class="container">
-    <button class="navbar-toggler mt-2 mt-lg-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" phx-update="ignore">
-      <ul class="navbar-nav mt-2 my-lg-0">
-        <li class="nav-item">
-          <%= link("Home", to: Routes.page_path(@conn, :index), class: "nav-link") %>
-        </li>
-      </ul>
+<div class="nav-section">
+  <div class="link-to-aif py-2">
+    <div class="container">
+      <%= link to: "http://arabimagefoundation.org/", class: "" do %>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-left-fill" viewBox="0 0 16 16">
+          <path d="m3.86 8.753 5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"/>
+        </svg>
+        <img src='<%= Routes.static_path(@conn, "/images/logo.png") %>' alt="Arab Image Foundation logo" />
+        <span class="ms-2 text-sm">Visit main AIF website</span>
+      <% end %>
     </div>
-    <%= link to: Routes.page_path(@conn, :index), class: "nav-brand" do %>
-      <img src='<%= Routes.static_path(@conn, "/images/logo.png") %>' alt="Arab Image Foundation logo" height="54" />
-    <% end %>
   </div>
-</nav>
+  <nav class="navbar navbar-expand-lg navbar-light" role="navigation">
+    <div class="container">
+      <a class="navbar-brand" href="#">AIF Albums Project</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent" phx-update="ignore">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <%= link("Home", to: Routes.page_path(@conn, :index), class: "nav-link") %>
+          </li>
+          <li class="nav-item">
+            <%= link("Collections", to: Routes.collection_index_path(@conn, :index), class: "nav-link") %>
+          </li>
+          <li class="nav-item">
+            <%= link("Albums", to: Routes.album_index_path(@conn, :index), class: "nav-link") %>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
