--- a/lib/aif_albums_web/live/collection_live/index.html.leex
+++ b/lib/aif_albums_web/live/collection_live/index.html.leex
@@ -1,45 +1,18 @@
-<div class="d-flex justify-content-between">
-  <h1>Collections</h1>
-  <span><%= live_patch "New Collection", to: Routes.collection_index_path(@socket, :new), class: "btn btn-success" %></span>
-</div>
-
-<%= if @live_action in [:new, :edit] do %>
-  <%= live_modal @socket, AIFAlbumsWeb.CollectionLive.FormComponent,
-    id: @collection.id || :new,
-    title: @page_title,
-    action: @live_action,
-    collection: @collection,
-    return_to: Routes.collection_index_path(@socket, :index) %>
-<% end %>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>Number</th>
-      <th>Name</th>
-      <th>Contract</th>
-
-      <th></th>
-    </tr>
-  </thead>
-  <tbody id="collections">
+<div id="collections-index">
+  <h1 class="mb-4">Collections</h1>
+  <div class="collections">
     <%= for collection <- @collections do %>
-      <tr id="collection-<%= collection.id %>">
-        <td><%= collection.aifid %></td>
-        <td><%= collection.name %></td>
-        <td><%= collection.contract %></td>
-
-        <td>
-          <div class="d-flex justify-content-end">
-            <%= live_redirect "Show", to: Routes.collection_show_path(@socket, :show, collection),
-                  class: "me-3 btn btn-sm btn-primary" %>
-            <%= live_patch "Edit", to: Routes.collection_index_path(@socket, :edit, collection),
-                  class: "me-5 btn btn-sm btn-warning" %>
-            <%= link "Delete", to: "#", phx_click: "delete", phx_value_id: collection.id,
-                  data: [confirm: "Are you sure?"], class: "btn btn-sm btn-danger" %>
+      <div class="">
+        <div id="collection-<%= collection.id %>" class="card">
+          <img src="https://via.placeholder.com/800x450?text=<%= collection.name %> collection"
+              alt="<%= collection.name %>" class="card-img-top" />
+          <div class="card-body">
+            <%= live_redirect "#{collection.aifid} — #{collection.name} Collection",
+                  to: Routes.collection_show_path(@socket, :show, collection),
+                  class: "fw-bold card-text stretched-link" %>
           </div>
-        </td>
-      </tr>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>
