Format album date in album view

--- a/lib/aif_albums_web/live/album_live/show.html.leex
+++ b/lib/aif_albums_web/live/album_live/show.html.leex
@@ -64,7 +64,7 @@
 
       <%= if @album.date != nil do %>
         <dt>Date:</dt>
-        <dd><%= @album.date %></dd>
+        <dd><%= Timex.format!(@album.date, "{Mfull} {YYYY}") %></dd>
       <% end %>
 
       <%= if @album.city != nil do %>
