Fix live_component warning re: socket
Live_component no longer needs the socket argument

--- a/lib/aif_albums_web/live/admin_live/album_live/index.html.leex
+++ b/lib/aif_albums_web/live/admin_live/album_live/index.html.leex
@@ -15,7 +15,7 @@
 </div>
 
 <%= if @live_action in [:new, :edit] do %>
-  <%= live_modal @socket, AIFAlbumsWeb.AdminLive.AlbumLive.FormComponent,
+  <%= live_modal AIFAlbumsWeb.AdminLive.AlbumLive.FormComponent,
     id: @album.id || :new,
     title: @page_title,
     action: @live_action,
