--- a/lib/aif_albums_web/live/admin_live/collection_live/index.html.leex
+++ b/lib/aif_albums_web/live/admin_live/collection_live/index.html.leex
@@ -15,7 +15,7 @@
 </div>
 
 <%= if @live_action in [:new, :edit] do %>
-  <%= live_modal @socket, AIFAlbumsWeb.AdminLive.CollectionLive.FormComponent,
+  <%= live_modal AIFAlbumsWeb.AdminLive.CollectionLive.FormComponent,
     id: @collection.id || :new,
     title: @page_title,
     action: @live_action,
