--- a/lib/aif_albums_web/live/admin_live/album_live/show.html.leex
+++ b/lib/aif_albums_web/live/admin_live/album_live/show.html.leex
@@ -1,5 +1,5 @@
 <%= if @live_action in [:edit] do %>
-  <%= live_modal @socket, AIFAlbumsWeb.AlbumLive.FormComponent,
+  <%= live_modal AIFAlbumsWeb.AlbumLive.FormComponent,
     id: @album.id,
     title: @page_title,
     action: @live_action,
