Add album pages and update album details admin page

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,6 +4,8 @@
 @import "bootstrap_overrides";
 @import "~bootstrap/scss/bootstrap";
 
+@import "admin/base";
+
 @import "partials/layout";
 @import "partials/modal";
 @import "partials/navigation";
