--- a/lib/aif_albums_web/live/admin_live/album_live/show.html.leex
+++ b/lib/aif_albums_web/live/admin_live/album_live/show.html.leex
@@ -1,82 +1,214 @@
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">
+      <%= live_redirect "Admin Home", to: Routes.admin_index_path(@socket, :index) %>
+    </li>
+    <li class="breadcrumb-item">
+      <%= live_redirect "Collections", to: Routes.admin_collection_index_path(@socket, :index) %>
+    </li>
+    <li class="breadcrumb-item">
+      <%= live_redirect "#{@album.collection.name}", to: Routes.admin_collection_show_path(@socket, :show, @album.collection) %>
+    </li>
+    <li class="breadcrumb-item" aria-current="page">
+      <%= @album.aifid %>
+    </li>
+  </ol>
+</nav>
+
+
 <%= if @live_action in [:edit] do %>
-  <%= live_modal AIFAlbumsWeb.AlbumLive.FormComponent,
+  <%= live_modal AIFAlbumsWeb.AdminLive.AlbumLive.FormComponent,
     id: @album.id,
     title: @page_title,
     action: @live_action,
     album: @album,
-    return_to: Routes.album_show_path(@socket, :show, @album) %>
+    return_to: Routes.admin_album_show_path(@socket, :show, @album) %>
+<% end %>
+<%= if @live_action in [:new_album_page] do %>
+  <%= live_modal AIFAlbumsWeb.AdminLive.AlbumPageLive.FormComponent,
+    id: :new,
+    album_page: @album_page,
+    album: @album,
+    title: @page_title,
+    action: :new,
+    return_to: Routes.admin_album_show_path(@socket, :show, @album) %>
 <% end %>
 
-<h1>Album</h1>
+<div class="admin-albums-show">
+  <h1 class="mb-4">
+    Album <%= @album.aifid %>
+    <%= live_patch "Edit", to: Routes.admin_album_show_path(@socket, :edit, @album),
+      class: "ms-2 btn btn-sm btn-secondary" %>
 
-<div class="row">
-  <div class="col-12 col-md-6 order-2 order-md-1">
-    <dl>
-      <dt>
-        Album number:
-      </dt>
-      <dd>
-        <%= @album.aifid %>
-      </dd>
+  </h1>
 
-      <dt>
+  <div>
+    <div class="row mb-2 border-top pt-1">
+      <div class="col-2 fw-bold">
         Collection:
-      </dt>
-      <dd>
+      </div>
+      <div class="col-10">
         <%= live_redirect "#{@album.collection.aifid} — #{@album.collection.name}",
-              to: Routes.collection_show_path(@socket, :show, @album.collection) %>
-      </dd>
+              to: Routes.admin_collection_show_path(@socket, :show, @album.collection) %>
+      </div>
+    </div>
 
-      <%= if @album.description != nil do %>
-        <dt>Description:</dt>
-        <dd><%= @album.description %></dd>
-      <% end %>
+    <div class="row mb-2 border-top pt-1">
+      <div class="col-2 fw-bold">
+        Description:
+      </div>
+      <div class="col-10">
+        <%= if @album.description != nil do %>
+          <%= @album.description %>
+        <% else %>
+          -
+        <% end %>
+      </div>
+    </div>
 
-      <%= if @album.height != nil do %>
-        <dt>Height:</dt>
-        <dd><%= @album.height %> cm</dd>
-      <% end %>
+    <div class="row mb-2 border-top pt-1">
+      <div class="col-2 fw-bold">
+        Height:
+      </div>
+      <div class="col-10">
+        <%= if @album.height != nil do %>
+          <%= @album.height %> cm
+        <% else %>
+          -
+        <% end %>
+      </div>
+    </div>
 
-      <%= if @album.width != nil do %>
-        <dt>Width:</dt>
-        <dd><%= @album.width %> cm</dd>
-      <% end %>
+    <div class="row mb-2 border-top pt-1">
+      <div class="col-2 fw-bold">
+        Width:
+      </div>
+      <div class="col-10">
+        <%= if @album.width != nil do %>
+          <%= @album.width %> cm
+        <% else %>
+          -
+        <% end %>
+      </div>
+    </div>
 
-      <%= if @album.depth != nil do %>
-        <dt>Depth:</dt>
-        <dd><%= @album.depth %> cm</dd>
-      <% end %>
 
-      <%= if @album.condition != nil do %>
-        <dt>Condition:</dt>
-        <dd><%= @album.condition %></dd>
-      <% end %>
 
-      <%= if @album.inscriptions != nil do %>
-        <dt>Inscriptions:</dt>
-        <dd><%= @album.inscriptions %></dd>
-      <% end %>
+    <div class="row mb-2 border-top pt-1">
+      <div class="col-2 fw-bold">
+        Depth:
+      </div>
+      <div class="col-10">
+        <%= if @album.depth != nil do %>
+          <%= @album.depth %> cm
+        <% else %>
+          -
+        <% end %>
+      </div>
+    </div>
 
-      <%= if @album.photographer != nil do %>
-        <dt>Photographer:</dt>
-        <dd><%= @album.photographer %></dd>
-      <% end %>
+    <div class="row mb-2 border-top pt-1">
+      <div class="col-2 fw-bold">
+        Condition:
+      </div>
+      <div class="col-10">
+        <%= if @album.condition != nil do %>
+          <%= @album.condition %>
+        <% else %>
+          -
+        <% end %>
+      </div>
+    </div>
 
-      <%= if @album.date != nil do %>
-        <dt>Date:</dt>
-        <dd><%= @album.date %></dd>
-      <% end %>
+    <div class="row mb-2 border-top pt-1">
+      <div class="col-2 fw-bold">
+        Inscriptions:
+      </div>
+      <div class="col-10">
+        <%= if @album.inscriptions != nil do %>
+          <%= @album.inscriptions %>
+        <% else %>
+          -
+        <% end %>
+      </div>
+    </div>
 
-      <%= if @album.city != nil do %>
-        <dt>City:</dt>
-        <dd><%= @album.city %></dd>
-      <% end %>
-    </dl>
+    <div class="row mb-2 border-top pt-1">
+      <div class="col-2 fw-bold">
+        Photographer:
+      </div>
+      <div class="col-10">
+        <%= if @album.photographer != nil do %>
+          <%= @album.photographer %>
+        <% else %>
+          -
+        <% end %>
+      </div>
+    </div>
 
+    <div class="row mb-2 border-top pt-1">
+      <div class="col-2 fw-bold">
+        Date:
+      </div>
+      <div class="col-10">
+        <%= if @album.date != nil do %>
+          <%= @album.date %>
+        <% else %>
+          -
+        <% end %>
+      </div>
+    </div>
+
+    <div class="row mb-2 border-top pt-1">
+      <div class="col-2 fw-bold">
+       City:
+      </div>
+      <div class="col-10">
+        <%= if @album.city != nil do %>
+          <%= @album.city %>
+        <% else %>
+          -
+        <% end %>
+      </div>
+    </div>
   </div>
-  <div class="col-12 col-md-6 order-1 order-md-2">
-    <img src="https://via.placeholder.com/800x450?text=<%= @album.aifid %> cover"
-          alt="Album <%= @album.aifid %>" class="card-img-top" />
-    <a class="btn btn-primary w-100 my-4">View Content</a>
+
+  <div class="album-pages mt-5 border-top border-3">
+    <div class="d-flex justify-content-between align-items-center py-3">
+      <h2>Pages</h2>
+      <span><%= live_patch "New Album Page", to: Routes.admin_album_show_path(@socket, :new_album_page, @album), class: "btn btn-success" %></span>
+    </div>
   </div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Number</th>
+        <th>Thumbnail</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody id="albums">
+      <%= for album_page <- @album.album_pages do %>
+        <tr id="album_page-<%= album_page.id %>">
+          <td class="align-middle">
+            <%= album_page.aifid %>
+          </td>
+          <td>
+            <img src="https://via.placeholder.com/80x45?text=<%= album_page.aifid %>"
+                  alt="Page <%= album_page.aifid %>" />
+          </td>
+          <td class="align-middle">
+            <div class="d-flex justify-content-end">
+              <%= live_redirect "Show", to: Routes.admin_album_page_show_path(@socket, :show, album_page),
+                    class: "me-3 btn btn-sm btn-primary" %>
+              <%# <%= live_patch "Edit", to: Routes.admin_album_show_path(@socket, :edit_album_page, @album, album_page),
+                    class: "me-5 btn btn-sm btn-secondary" %>
+              <%= link "Delete", to: "#", phx_click: "delete", phx_value_id: album_page.id,
+                    data: [confirm: "Are you sure?"], class: "btn btn-sm btn-danger" %>
+            </div>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
