--- a/lib/aif_albums_web/templates/layout/_navbar.html.leex
+++ b/lib/aif_albums_web/templates/layout/_navbar.html.leex
@@ -21,6 +21,21 @@
           <li class="nav-item">
             <%= link("Home", to: Routes.page_path(@conn, :index), class: "nav-link") %>
           </li>
+          <%# <li class="nav-item">
+            <a href="#" class="nav-link">Collection</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Lab</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Explore</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Engage</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Support</a>
+          </li> %>
         </ul>
       </div>
     </div>
