--- a/lib/aif_albums_web/live/admin_live/album_live/form_component.html.leex
+++ b/lib/aif_albums_web/live/admin_live/album_live/form_component.html.leex
@@ -13,6 +13,48 @@
   <%= label f, "Collection" %>
   <%= select f, :collection_id, Enum.map(@collections, &{"#{&1.aifid} — #{&1.name}", &1.id}), class: "form-select" %>
 
+  <%= label f, "Cover Image", class: "form-label mt-3" %>
+  <div>
+        <%= hidden_input f, :cover_image_url %>
+        <%= if @album.cover_image_url do %>
+              <%= img_tag @album.cover_image_url, class: "img-thumbnail mb-2", style: "height: 75px;" %>
+        <% end %>
+  </div>
+  <div>
+        <a class="btn btn-secondary btn-sm"
+                    onclick="document.getElementsByClassName('cover-image-upload')[0].click()">
+              Choose new cover image
+        </a>
+        <%= error_tag f, :cover_image_url %>
+  </div>
+  <%= live_file_input @uploads.cover_image, class: "d-none cover-image-upload" %>
+  <%= for entry <- @uploads.cover_image.entries do %>
+        <div class="d-flex align-items-center gap-2 mt-2">
+              <div class="img-thumbnail"><%= live_img_preview(entry, height: 30) %></div>
+              <div class="my-2">File: <%= entry.client_name %></div>
+              <div class="progress flex-grow-1">
+                    <div class="progress-bar progress-bar-animated"
+                          role="progressbar"
+                          style="width: <%= entry.progress %>%;"
+                          aria-valuenow="<%= entry.progress %>"
+                          aria-valuemin="0"
+                          aria-valuemax="100">
+                          <%= entry.progress %>%
+                    </div>
+              </div>
+              <span phx-click="cancel-cover-image-upload" phx-value-ref="<%= entry.ref %>" phx-target="<%= @myself %>" style="cursor: pointer;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-square text-danger" viewBox="0 0 16 16">
+                          <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                          <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+              </span>
+        </div>
+        <%# Phoenix.LiveView.Helpers.upload_errors/2 returns a list of error atoms %>
+        <%= for err <- upload_errors(@uploads.cover_image, entry) do %>
+              <p class="alert alert-danger"><%= error_to_string(err) %></p>
+        <% end %>
+  <% end %>
+
   <%= input f, :description, using: :textarea, group_class: "my-3",
       input_opts: [placeholder: "Description", rows: 6] %>
 
