--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10,7 +10,7 @@
 @import "partials/modal";
 @import "partials/navigation";
 @import "partials/footer";
-@import "partials/homepage";
+@import "partials/albums";
 @import "partials/collections_index";
 @import "partials/collections_show";
 
