--- a/assets/css/partials/_layout.scss
+++ b/assets/css/partials/_layout.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background-color: #F5F4FA;
+  background-color: #ffffff;
   height: 100%;
   display: grid;
   grid-template-columns: auto;
