--- a/lib/aif_albums_web/live/album_live/show_page.html.leex
+++ b/lib/aif_albums_web/live/album_live/show_page.html.leex
@@ -1,8 +1,9 @@
+<%= live_component @socket,
+      AlbumSpreadComponent,
+      current_album_page: @current_album_page,
+      album: @album %>
 
-<div>
-  <%= img_tag @current_album_page.image_url, width: "100%",
-      alt: "Album page #{@current_album_page.aifid}" %>
-</div>
+
 <!--
 <div class="d-flex gap-2 mt-3">
   <%= for album_page <- @album.album_pages do %>
