--- a/lib/aif_albums_web/live/album_live/album_spread_component.html.leex
+++ b/lib/aif_albums_web/live/album_live/album_spread_component.html.leex
@@ -1,4 +1,6 @@
 <div>
-  <%= img_tag @current_album_page.image_url, width: "100%",
-      alt: "Album page #{@current_album_page.aifid}" %>
+  <%= img_tag @current_album_spread.image_url, width: "100%",
+      alt: "Album spread #{@current_album_spread.aifid}" %>
+</div>
+<div>
 </div>
